# vsag

./: CMakeLists.txt  header.cpp  train.py
.circleci/: config.yml
experiment/: CMakeLists.txt  benchmark_build_index.cpp  constants_path.h
scripts/: test_asan_bg.sh  test_parallel_by_name.sh
src/: CMakeLists.txt  byte_buffer.h  constants.cpp  dataset_impl.cpp  (+9 more)
src/impl/: CMakeLists.txt  basic_optimizer.h  basic_searcher.cpp  basic_searcher.h  kmeans.cpp  kmeans.h  kmeans_cluster.cpp  label_table.cpp  label_table_test.cpp  odescent_graph_builder.h  pruning_strategy.h  reorder.h
src/impl/allocator/: default_allocator.cpp  default_allocator.h
src/impl/bitset/: fast_bitset.cpp  fast_bitset.h
src/impl/filter/: black_list_filter.cpp  white_list_filter.cpp
src/impl/reorder/: flatten_reorder.cpp
src/impl/searcher/: basic_searcher.cpp
src/impl/transform/: CMakeLists.txt  pca_transformer.cpp
src/quantization/: CMakeLists.txt  computer.h  fp32_quantizer.h  fp32_quantizer_test.cpp  pq_quantizer.h  pq_quantizer_test.cpp  quantizer.h  quantizer_adapter.cpp  quantizer_test.h  sq4_quantizer.h  sq4_quantizer_test.cpp  sq4_uniform_quantizer.h  sq4_uniform_quantizer_test.cpp  sq8_quantizer.h  sq8_quantizer_test.cpp  sq8_uniform_quantizer_test.cpp
src/quantization/product_quantization/: pq_fastscan_quantizer.h  product_quantizer.h
src/quantization/rabitq_quantization/: rabitq_quantizer.h
src/quantization/scalar_quantization/: bf16_quantizer.h  fp16_quantizer.h  sq4_quantizer.h  sq4_uniform_quantizer.h  sq8_quantizer.h  sq8_uniform_quantizer.h
src/quantization/sparse_quantization/: sparse_quantizer.h
(+139 files in other folders)
